duniverse/menhirLib.20200211/test/static/bad/semibarcomma.mly
%token A B

%%

let main :=
  A(B

%token FOO
