duniverse/menhirLib.20200211/test/static/bad/semibarcomma.exp
File "semibarcomma.mly", line 8, characters 0-6:
Error: syntax error after 'B' and before '%token'.
At this point, one of the following is expected:
a semicolon ';' followed with an expression, or
a bar '|' followed with an expression, or
a comma ',' followed with an expression, or
a closing parenthesis ')'.
